force-app/main/default/objects/Contact/fields/Brand_Assortment__c.field-meta.xml
<CustomField>
    <fullName>Brand_Assortment__c</fullName>
    <formula>TEXT(Account.Brand_Assortment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand</label>
    <type>Text</type>
</CustomField>