force-app/main/default/objects/Contact/fields/Lead_CTL__c.field-meta.xml
<CustomField>
    <fullName>Lead_CTL__c</fullName>
    <formula>Account.Lead_CTL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead CTL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>