force-app/main/default/objects/Contact/fields/Total_Customer_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Customer_Value__c</fullName>
    <formula>Account.Subtotal_From_Zero_Balance_Orders__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Customer Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>